logs/torchrs.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/torchrs'...
Compiling './lib/python3.5/site-packages/torchrs/__main__.py'...
***   File "./lib/python3.5/site-packages/torchrs/__main__.py", line 12
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/torchrs/git'...
Listing './lib/python3.5/site-packages/torchrs/logger'...
Compiling './lib/python3.5/site-packages/torchrs/logger/logger.py'...
***   File "./lib/python3.5/site-packages/torchrs/logger/logger.py", line 48
    print self.formatString.format(self.namespace, tag, content)
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/torchrs/module'...
Compiling './lib/python3.5/site-packages/torchrs/resolver.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (resolver.py, line 87)
Listing './lib/python3.5/site-packages/torchrs/shell'...
Listing './lib/python3.5/site-packages/torchrs-0.2.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
